# DynamoDocs

./: .gitignore  README.md  config.yml  config.yml.template  pyproject.toml  requirements.txt
.project_hierarchy/: meta-info.json  project_hierarchy.json
dynamodocs/: __main__.py  config.py  diff_detector.py  engine.py  file_handler.py  launcher.py  project_manager.py  tree_handler.py
dynamodocs/prompts/: dev_prompt.py  high_overview.py
dynamodocs/utils/: meta_info_utils.py
markdown_docs/dynamodocs/: __main__.md  diff_detector.md  engine.md  file_handler.md  launcher.md  project_manager.md  threads.md  tree_handler.md
markdown_docs/dynamodocs/utils/: gitignore_checker.md  meta_info_utils.md
markdown_docs/src/: __main__.md  diff_detector.md  engine.md  file_handler.md  index.md  project_manager.md  threads.md  tree_handler.md
markdown_docs/src/utils/: gitignore_checker.md  meta_info_utils.md
myenv/: pyvenv.cfg
src/: AST_handler.py  __main__.py  diff_detector.py  engine.py  file_handler.py  index.py  parallel.py  project_manager.py  refresh.py  threads.py  tree_handler.py
src/utils/: gitignore_checker.py  meta_info_utils.py
